LFD259/app2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secondapp
  labels:
    run: my-nginx
spec:
  ports:
    - port: 80
      protocol: TCP
  type: NodePort
#  type: LoadBalancer
  selector:
    example: second
