LFD259/app2/ingress.rule.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: www.example.com
      http:
        paths:
          - backend:
              serviceName: secondapp
              servicePort: 80
            path: /
    - host: thirdpage.org
      http:
        paths:
          - backend:
              serviceName: thirdpage
              servicePort: 80
            path: /
            pathType: ImplementaionSpecific
