LFD259/app2/allclosed.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.0.0/16
      ports:
        - port: 80
          protocol: TCP
#  - Egress
